<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_item_checkout"
        android:icon="@android:drawable/ic_media_next"
        android:title="@string/checkout"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_item_clear"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/clear_list"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_item_preference"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/preferences"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_item_reset"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/reset_list"
        app:showAsAction="ifRoom"/>

</menu>