<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/add" />

    <AutoCompleteTextView
        android:id="@+id/textbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_toLeftOf="@id/btn_add"
        android:inputType="textCapWords"
        android:imeOptions="actionDone"
        android:hint="@string/add_hint" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textFilterEnabled="true"
        android:layout_below="@id/textbox"
        android:cacheColorHint="#00000000" />

    <TextView
        android:id="@+id/empty"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:cacheColorHint="#00000000"
        android:layout_below="@id/textbox"
        android:padding="10dp"
    	android:text="@string/empty_list" />

</RelativeLayout>
